; ModuleID = '/home/carl/AnghaBench/lz4/ossfuzz/extr_round_trip_stream_fuzzer.c_state_randomRoundTrip.c'
source_filename = "/home/carl/AnghaBench/lz4/ossfuzz/extr_round_trip_stream_fuzzer.c_state_randomRoundTrip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)*)* @state_randomRoundTrip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @state_randomRoundTrip(%struct.TYPE_6__* %0, i32 (%struct.TYPE_6__*)* %1, i32 (%struct.TYPE_6__*)* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32 (%struct.TYPE_6__*)*, align 8
  %6 = alloca i32 (%struct.TYPE_6__*)*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 (%struct.TYPE_6__*)* %1, i32 (%struct.TYPE_6__*)** %5, align 8
  store i32 (%struct.TYPE_6__*)* %2, i32 (%struct.TYPE_6__*)** %6, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = call i64 @FUZZ_rand32(i32* %8, i32 0, i32 1)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %5, align 8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %14 = call i32 %12(%struct.TYPE_6__* %13)
  br label %19

15:                                               ; preds = %3
  %16 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %6, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = call i32 %16(%struct.TYPE_6__* %17)
  br label %19

19:                                               ; preds = %15, %11
  ret void
}

declare dso_local i64 @FUZZ_rand32(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
